--- a/FinCalcIn3/app/src/main/res/layout/activity_main.xml
+++ b/FinCalcIn3/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,13 @@
             app:layout_constraintTop_toBottomOf="@+id/linear1">
 
             <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+
+            <TextView
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -76,6 +83,13 @@
                 android:layout_weight="1"
                 android:text="Interest" />
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+
 
         </LinearLayout>
 
@@ -91,7 +105,7 @@
             <EditText
                 android:id="@+id/editTextTextPersonName5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -169,5 +183,22 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/freqTextField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/comic_neue_bold"
+        android:text="Compound Frequency"
+        android:textAlignment="center"
+        android:textColor="#D3D3D3"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear1" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
