--- a/FinCalcIn3/app/src/main/res/layout/payment.xml
+++ b/FinCalcIn3/app/src/main/res/layout/payment.xml
@@ -30,8 +30,8 @@
         android:layout_marginTop="15dp"
         android:text="Payment"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#00FFF7"
+        app:backgroundTint="#0013FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:text="Deposit" />
+                android:text="Down Payment" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -129,7 +129,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:text="Periodical Payments" />
+                android:text="Total Price" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -186,7 +186,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/comic_neue_bold"
-        android:text="Compound Frequency"
+        android:text="Payment Frequency"
         android:textAlignment="center"
         android:textColor="#D3D3D3"
         android:textSize="24sp"
@@ -234,8 +234,8 @@
         android:layout_marginTop="15dp"
         android:text="Future Value"
         android:textAllCaps="false"
-        android:textColor="#00FFF7"
-        app:backgroundTint="#0013FF"
+        android:textColor="#0013FF"
+        app:backgroundTint="#00FFF7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
