--- a/FinCalcIn3/app/src/main/res/layout/activity_main.xml
+++ b/FinCalcIn3/app/src/main/res/layout/activity_main.xml
@@ -216,6 +216,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:background="@drawable/my_button_bg"
+        android:fontFamily="@font/comic_neue_bold"
         android:text="Calculate"
         android:textAllCaps="false"
         android:textColor="#0013FF"
