updated ui and added more functionality

--- a/FinCalcIn3/app/src/main/res/layout/payment.xml
+++ b/FinCalcIn3/app/src/main/res/layout/payment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFF7"
+    android:background="#AFFFFA"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:text="FinCalcIn"
         android:textAlignment="center"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +30,8 @@
         android:layout_marginTop="15dp"
         android:text="Payment"
         android:textAllCaps="false"
-        android:textColor="#00FFF7"
-        app:backgroundTint="#0013FF"
+        android:textColor="#AFFFFA"
+        app:backgroundTint="#2224FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,8 +203,8 @@
         android:layout_marginTop="20dp"
         android:text="Semi-Annual"
         android:textAllCaps="false"
-        android:textColor="#00FFF7"
-        app:backgroundTint="#0013FF"
+        android:textColor="#AFFFFA"
+        app:backgroundTint="#2224FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -218,7 +218,7 @@
         android:background="@drawable/my_button_bg"
         android:text="Calculate"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:backgroundTint="@null"
@@ -234,8 +234,8 @@
         android:layout_marginTop="15dp"
         android:text="Future Value"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -247,8 +247,8 @@
         android:layout_marginTop="15dp"
         android:text="Present Value"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -260,8 +260,8 @@
         android:layout_marginTop="20dp"
         android:text="Yearly"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/freqTextField" />
@@ -273,8 +273,8 @@
         android:layout_marginTop="20dp"
         android:text="Monthly"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/freqTextField" />
