--- a/FinCalcIn3/app/src/main/res/layout/results.xml
+++ b/FinCalcIn3/app/src/main/res/layout/results.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFF7"
+    android:background="#AFFFFA"
     tools:context=".Results">
 
     <TextView
@@ -15,7 +15,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:text="FinCalcIn"
         android:textAlignment="center"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_width="409dp"
         android:layout_height="0dp"
         android:layout_marginTop="310dp"
-        android:background="@color/white"
+        android:background="?android:colorBackground"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:text="Recalculate"
         android:fontFamily="@font/comic_neue_bold"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:backgroundTint="@null"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="$0.00"
-        android:textColor="#0810FF"
+        android:textColor="#2224FF"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
