--- a/FinCalcIn3/app/src/main/res/drawable-v24/my_button_bg.xml
+++ b/FinCalcIn3/app/src/main/res/drawable-v24/my_button_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#00FFF7"
-        android:endColor="#00FFF7"
+    <gradient android:startColor="#AFFFFA"
+        android:endColor="#AFFFFA"
         android:angle="315" />
     <corners android:radius="30dp" />
-    <stroke android:width="5px" android:color="#0013FF" />
+    <stroke android:width="5px" android:color="#2224FF" />
 </shape>
