--- a/FinCalcIn3/app/src/main/res/layout/activity_main.xml
+++ b/FinCalcIn3/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFF7"
+    android:background="#AFFFFA"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:text="FinCalcIn"
         android:textAlignment="center"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +30,8 @@
         android:layout_marginTop="15dp"
         android:text="Payment"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
+        android:background="?android:colorBackground"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,8 +53,8 @@
             android:id="@+id/linear2"
             android:layout_width="409dp"
             android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
             android:layout_marginTop="0dp"
-            android:background="@color/white"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/linear1">
 
@@ -62,6 +62,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
@@ -72,6 +73,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
@@ -98,8 +100,9 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="$1,000" />
+                android:inputType="number"
+                android:text="$1,000"
+                android:textColor="?android:textColorSecondary" />
 
 
             <EditText
@@ -110,15 +113,15 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="10%" />
+                android:inputType="number"
+                android:text="10%"
+                android:textColor="?android:textColorSecondary" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linear4"
             android:layout_width="409dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/linear1">
 
@@ -126,6 +129,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
@@ -135,6 +139,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
@@ -159,23 +164,25 @@
                 android:id="@+id/editTextTextPersonName3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="$1,000" />
+                android:inputType="number"
+                android:text="$1,000"
+                android:textColor="?android:textColorSecondary"/>
 
 
             <EditText
                 android:id="@+id/editTextTextPersonName4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="5" />
+                android:inputType="number"
+                android:text="5"
+                android:textColor="?android:textColorSecondary"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -188,7 +195,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:text="Compound Frequency"
         android:textAlignment="center"
-        android:textColor="#D3D3D3"
+        android:textColor="#d3d3d3"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -203,8 +210,8 @@
         android:layout_marginTop="20dp"
         android:text="Semi-Annual"
         android:textAllCaps="false"
-        android:textColor="#00FFF7"
-        app:backgroundTint="#0013FF"
+        android:textColor="#AFFFFA"
+        app:backgroundTint="#2224FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +226,7 @@
         android:fontFamily="@font/comic_neue_bold"
         android:text="Calculate"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
+        android:textColor="#2224FF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:backgroundTint="@null"
@@ -235,8 +242,8 @@
         android:layout_marginTop="15dp"
         android:text="Future Value"
         android:textAllCaps="false"
-        android:textColor="#00FFF7"
-        app:backgroundTint="#0013FF"
+        android:textColor="#AFFFFA"
+        app:backgroundTint="#2224FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -248,8 +255,8 @@
         android:layout_marginTop="15dp"
         android:text="Present Value"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -261,8 +268,8 @@
         android:layout_marginTop="20dp"
         android:text="Yearly"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/freqTextField" />
@@ -274,8 +281,8 @@
         android:layout_marginTop="20dp"
         android:text="Monthly"
         android:textAllCaps="false"
-        android:textColor="#0013FF"
-        app:backgroundTint="#00FFF7"
+        android:textColor="#2224FF"
+        app:backgroundTint="#AFFFFA"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/freqTextField" />
